# Turing-APIs

./: .clangd  .gitignore  .markdownlint.json  Cargo.toml  README.md  meson.build
AssemblyScript/: README.md
AssemblyScript/assemblyscript-template/: README.md  asconfig.json  index.html  package.json
AssemblyScript/assemblyscript-template/assembly/: index.ts
AssemblyScript/turing-api-assemblyscript/: turing_api_assemblyscript.ts
C and C++/: README.md
C and C++/c-template/: Makefile  build.bat  build.sh  main.c  script.wasm
C and C++/cpp-template/: Makefile  build.bat  build.sh  main.cpp  script.wasm
C and C++/internal/src/: wasm_imports.h
C and C++/turing-api-c/: Makefile  build.bat  build.sh
C and C++/turing-api-c/include/: turing_api.h  turing_api_c.h
C and C++/turing-api-c/src/: turing_api.c  turing_api_c.c
C and C++/turing-api-cpp/: Makefile  build.bat  build.sh
C and C++/turing-api-cpp/include/: turing_api.hpp  turing_api_cpp.hpp
C and C++/turing-api-cpp/src/: turing_api.cpp  turing_api_cpp.cpp
C#/: README.md
Go/: README.md
Go/go-template/: main.go
Go/turing-api-go/: turing_api_go.go
JS and TS/: README.md
Java and Kotlin/: README.md
Kotlin/: README.md
Kotlin/kotlin-template/: settings.gradle.kts
Kotlin/turing-api-kotlin/: build.gradle.kts
Lua/: README.md
Lua/lua-template/: Makefile  README.md  build.bat  build.sh  main.nelua
Lua/turing-api-lua/: turing_api.nelua  turing_api_lua.h  turing_api_lua.nelua
Python/: README.md
Rust/: README.md
Rust/rust-template/: cargo.toml
Rust/rust-template/src/: lib.rs
TuringApiGen/: Cargo.toml  README.md
TuringApiGen/api-spec/: turing.txt  type-map
TuringApiGen/output/: api.c  api.h  api.rs  api.wasm.h  turing_api.hpp  turing_api.rs  zig-api.zig
TuringApiGen/src/: main.rs
TuringApiGen/templates/: c.tera  h.tera  hpp.tera  rs.tera  rust-api.rs.tera  turing_api.zig.tera  wasm.h.tera
Zig/: README.md
Zig/turing-api/: build.zig
Zig/turing-api-zig/: build.zig  build.zig.zon
Zig/turing-api-zig/src/: root.zig
Zig/zig-template/: build.zig  build.zig.zon
Zig/zig-template/src/: main.zig
api-gen/: api_converter.py  expanded.rs
api-gen/base/: api_defs.mdef  api_defs.txt  wasm-std.c
api-spec/: core.txt  disallowed  test.txt  turing.txt  type-map
extra-langs/D/d-template/: main.d
extra-langs/D/turing-api-d/: turing_api_d.d
extra-langs/Grain/grain-template/: main.gr
extra-langs/Grain/turing-api-grain/: turing_api_grain.gr
extra-langs/Nim/nim-template/: main.nim
extra-langs/Nim/turing-api-nim/: turing_api_nim.nim
extra-langs/Odin/odin-template/: main.odin
extra-langs/Odin/turing-api-odin/: turing_api_odin.odin
extra-langs/V/turing-api-v/: turing_api_v.v
extra-langs/V/v-template/: main.v
output/asmscript/: README.md
output/asmscript/asmscript-template/: package.json
output/asmscript/core-asmscript/: core.ts
output/asmscript/turing-api-asmscript/: turing_api.asc  turing_api.ts
output/c and c++/: release.ps1
output/c and c++/api/: README.md  turing_api.cpp  turing_api.hpp  turing_api_cpp.hpp
output/c/include/: core.h
output/c/src/: core.c
output/cpp/: README.md  meson.build  release.sh  zig-cross.txt
output/cpp/api/: turing_api.cpp  turing_api.hpp
output/cpp/src/: main.cpp
output/cpp/subprojects/: glm.wrap
output/go/core-go/: core_go.go  go.mod
output/go/go-template/: go.mod
output/go/turing-api-go/: turing_api_go.go
output/kotlin/: README.md
output/kotlin/kt-template/: build.gradle.kts
output/kotlin/turing-kt-example/: README.md  settings.gradle.kts
output/kotlin2/kotlin-turing/: README.md
output/lua/: README.md
output/lua/core-lua/: core.d.lua
output/lua/lua-template/: script.lua
output/lua/turing-api-lua/: turing_api.d.lua
output/rust/: README.md
output/rust/core-rs/: Cargo.toml
output/rust/rust-template/: Cargo.toml
output/rust/turing-api-rs/: Cargo.toml  README.md
output/shared/include/: core_wasm.h  turing_api_wasm.h
output/zig/core-zig/: build.zig  build.zig.zon
output/zig/turing-api-zig/: build.zig  build.zig.zon
output/zig/zig-template/: build.zig  build.zig.zon
output_test/asmscript/turing-api-asmscript/: turing_api.ts
output_test/c and c++/: README.md  wasi-cross.txt
output_test/c and c++/api/: meson.build
output_test/go/go-template/: go.mod
output_test/go/turing-api-go/: turing_api_go.go
output_test/lua/lua-template/: script.lua
output_test/lua/turing-api-lua/: turing_api.d.lua
output_test/rust/rust-template/: Cargo.toml
output_test/rust/turing-api-rs/: Cargo.toml  README.md
output_test/rust/turing-api-rs/src/: lib.rs
output_test/shared/include/: turing_api_wasm.h
src/: main.rs
templates/asmscript/: README.md
templates/asmscript/--api---asmscript/: __api__.ts.tera  linear_algebra.ts
templates/c and c++/: .gitignore  dev.ps1  dev.sh  meson.build  release.ps1  release.sh  zig-cross.txt
templates/c and c++/--api---c/include/: __api___c.h.tera
templates/c and c++/--api---c/src/: __api___c.c.tera
templates/c and c++/--api---cpp/include/: __api___cpp.hpp.tera
templates/c and c++/--api---cpp/src/: __api___cpp.cpp.tera
templates/c and c++/api/: meson.build
templates/c and c++/cpp-template/src/: main.cpp.tera
templates/c and c++/old/--api---c/src/: __api___c.c.tera
templates/c and c++/old/--api---cpp/include/: __api___cpp.hpp.tera
templates/c and c++/old/--api---cpp/src/: __api___cpp.cpp.tera
templates/c and c++/old/c-template/src/: main.c.tera
templates/c and c++/src/: main.cpp
templates/c and c++/subprojects/: .gitignore  glm.wrap
templates/c and c++/turing-api-c/include/: turing_api_c.h.tera
templates/c and c++/turing-api-c/src/: turing_api_c.c.tera
templates/c and c++/turing-api-cpp/include/: turing_api_cpp.hpp.tera
templates/c and c++/turing-api-cpp/src/: turing_api_cpp.cpp.tera
templates/cpp/: wasi-cross.txt
templates/rust/: README.md
templates/zig/: README.md
templates_old/asmscript/: README.md
templates_old/c and c++/: dev.ps1  release.sh
templates_old/go/: README.md
templates_old/shared/: README.md
(+88 files in other folders)
