[workspace]

[package]
name = "turing-api"
version = "1.0.0"
edition = "2024"
license = "GPL-2.0-only"

description = "The Turing mod scripting API for Beat Saber"
repository = "https://github.com/westbot657/turing-apis"
include = [
    "Cargo.toml",
    "src/**",
    "README.md"
]
readme = "README.md"
keywords = ["beatsaber", "turing", "api"]
categories = ["api-bindings", "game-development"]

[features]
default = ["glam"]
glam = ["dep:glam"]
nalgebra = ["dep:nalgebra"]

[dependencies]
glam = { version = "0.31.0", optional = true }
nalgebra = { version = "0.34.1", optional = true }



